# rust-auth-service

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.test  GETTING_STARTED.md  GPG_SETUP.md  LICENSE  MILESTONE-3-VERIFICATION.md  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  SECURITY_REMEDIATION_SUMMARY.md  TODO.md  admin_dashboard_test.md  audit.toml  config.yml.bak2  config.yml.example  deny.toml  development-log.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  gpg-test.txt  improvements.md  tarpaulin.toml
.github/: README.md  docker-compose.test.yml  pull_request_template.md
.github/workflows/: README-DISABLED.md  basic-ci.yml  branch-protection.yml  ci-minimal.yml  ci.yml  comprehensive-ci.yml  coverage.yml  deployment.yml  main-ci.yml  monitoring.yml  performance-testing.yml  performance.yml  pr-validation.yml  quality-gates.yml  release.yml  security-scan.yml  security.yml.disabled
.github/workflows-disabled/: basic-ci.yml.disabled  ci-complex.yml.disabled  security.yml
backup/: README.md  docker-compose.backup.yml
backup/config/: backup.conf
backup/cron/: backup-crontab
backup/docker/: entrypoint.sh
backup/scripts/: backup.sh  disaster-recovery.sh  restore.sh
config/: development.yml  production.yml  staging.yml  testing.yml
docker/: README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/auth-service/: Dockerfile.dev  Dockerfile.prod
docker/compose/: docker-compose.yml
docker/env/: .env.development  .env.example
docker/nextjs-integration/: Dockerfile
docker/nginx/: nginx.conf
docker/scripts/: generate-ssl.sh  health-check.sh  seed-database.sh  setup-dev.sh
docs/: API_DOCUMENTATION.md  CICD_AUTOMATION.md  CONTRIBUTING.md  COVERAGE.md  ENDPOINT_ISSUES.md  MASTER_TODOS.md  MILESTONE-3-SUMMARY.md  PROJECT_MANAGEMENT.md  README.md  RESEARCH_DOCUMENTATION.md  todos.md
docs/api/: INTEGRATION_GUIDE.md  README.md  index.html  openapi.yaml
docs/deployment/: README.md  aws.md  gcp.md  kubernetes.md  local-development.md  production-best-practices.md
examples/: .gitignore  README.md
examples/nextjs-integration/: .env.example  .gitignore  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
examples/python-client/: README.md  setup.py
examples/react-hooks-library/: README.md  package.json  rollup.config.js  tsconfig.json
examples/react-integration/: README.md  package.json
examples/vue-integration/: package.json
helm/auth-service/: Chart.yaml  values.yaml
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  rbac.yaml  secrets.yaml  service.yaml  statefulset.yaml
migrations/mongodb/: 001_initial_schema.js
migrations/mysql/: 001_initial_schema.sql  run_migrations.sh
migrations/postgresql/: 001_initial_schema.sql  002_add_user_sessions_table.sql  run_migrations.sh
monitoring/: docker-compose.monitoring.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/loki/: loki-config.yaml
monitoring/prometheus/: prometheus.yml
scripts/: coverage-trends.py  coverage.sh  generate-research-report.sh  industry-standard-study.sh  init-mongo.js  performance-benchmark.sh  pre-commit-coverage.sh  quick-research-study.sh  run-complete-research-study.sh  setup-dev.sh  test-all-databases.sh
src/: errors.rs  lib.rs  main.rs
src/admin/: dashboard.rs  handlers.rs  mod.rs
src/cache/: factory.rs  memory_cache.rs  mod.rs  redis_cache.rs
src/config/: auth.rs  cache.rs  database.rs  email.rs  mod.rs  rate_limit.rs  server.rs  validator.rs
src/database/: mod.rs  mongodb.rs  mysql.rs  postgresql.rs
src/email/: mod.rs  templates.rs
src/handlers/: auth.rs  auth_simple.rs  health.rs  metrics.rs  mfa.rs  mod.rs  oauth2.rs  system_metrics.rs
src/health/: alerts.rs  checker.rs  metrics.rs  mod.rs
src/metrics/: mod.rs
src/mfa/: backup_codes.rs  mod.rs  sms.rs  totp.rs  webauthn.rs
src/middleware/: auth.rs  cors.rs  metrics.rs  mod.rs  rate_limit.rs
src/migrations/: mod.rs  mongodb.rs  mysql.rs  postgresql.rs  runner.rs
src/models/: user.rs
src/oauth2/: client.rs  flows.rs  mod.rs  pkce.rs  scopes.rs  server.rs  tokens.rs
src/observability/: logging.rs  metrics.rs  mod.rs  tracing.rs
src/services/: auth.rs
src/session/: analytics.rs  device.rs  manager.rs  mod.rs  security.rs
src/social/: discord.rs  github.rs  google.rs  mod.rs
src/user_management/: groups.rs  mod.rs  permissions.rs  profiles.rs  roles.rs
src/utils/: jwt.rs  mod.rs  password.rs  response.rs  validation.rs
templates/: admin_dashboard.html
tests/: README.md  auth_integration_tests.rs  cache_integration.rs  comprehensive_tests.rs  database_adapters_integration.rs  integration_tests.rs  mfa_integration.rs  oauth2_integration.rs  openapi_tests.rs  performance_load_testing.rs  rate_limiting_enhanced.rs  rate_limiting_enhanced.rs.disabled  security_integration.rs  simple_auth_integration.rs  simple_auth_integration.rs.disabled  social_auth_integration.rs  social_auth_integration.rs.disabled  test_runner.rs
tests/benchmarks/: README.md  cache_performance.rs  database_performance.rs  endpoint_benchmarks.rs  mod.rs  regression_testing.rs  resource_monitoring.rs
tests/common/: cache.rs  database.rs  database.rs.disabled  fixtures.rs  mod.rs  utils.rs  utils.rs.disabled
tests/helpers/: auth_test_helpers.rs  mod.rs
tests/integration/: auth_flow.rs  cache_invalidation_tests.rs  cache_memory_tests.rs  cache_multilevel_tests.rs  cache_redis_tests.rs  comprehensive_test.rs  cross_database_tests.rs  email_verification.rs  load_tests.rs  migration_tests.rs  mod.rs  mongodb_tests.rs  password_reset.rs  performance_tests.rs  postgresql_tests.rs  protected_endpoints.rs  test_containers.rs  test_framework.rs
tests/load/: README.md  auth_load_test.yml  auth_processor.js  cache_performance.yml  database_stress.yml
tests/security/: README.md
(+68 files in other folders)
