[package]
name = "rust-auth-service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "270x faster authentication service - production-ready out of the box"
license = "MIT"
repository = "https://github.com/your-org/rust-auth-service"
keywords = ["auth", "authentication", "jwt", "microservice", "rust"]
categories = ["authentication", "web-programming::http-server"]

[features]
default = ["mongodb", "postgresql", "mysql"]
# Database support - users can disable MySQL to avoid RSA vulnerability
mongodb = []
postgresql = ["sqlx", "sqlx/postgres"]
mysql = ["sqlx", "sqlx/mysql"]
# Security-focused builds (progressively eliminate RSA vulnerability)
secure = ["mongodb", "postgresql"]  # PostgreSQL + MongoDB (eliminates MySQL RSA)
ultra-secure = ["mongodb"]          # MongoDB only (eliminates ALL SQLx dependencies and RSA)

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database  
mongodb = "3.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "chrono", "uuid"], optional = true }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"

# Caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
lru = "0.12"

# Email & HTTP Client
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# Configuration & Environment
config = "0.14"
dotenvy = "0.15"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
md5 = "0.7"
thiserror = "1.0"
validator = { version = "0.19", features = ["derive"] }
regex = "1.10"
url = "2.5"
futures = "0.3"
fastrand = "2.0"

# Development
[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.8"
base64 = "0.21"

[[bin]]
name = "test_cache"
path = "src/bin/test_cache.rs"

[[bin]]
name = "test_endpoints"
path = "src/bin/test_endpoints.rs"
