[package]
name = "rust-auth-service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "270x faster authentication service - production-ready out of the box"
license = "MIT"
repository = "https://github.com/your-org/rust-auth-service"
keywords = ["auth", "authentication", "jwt", "microservice", "rust"]
categories = ["authentication", "web-programming::http-server"]

[features]
default = ["mongodb"]  # Ultra-secure build: MongoDB only, zero RSA vulnerability
# Database support - PostgreSQL and MySQL removed due to RSA vulnerability (RUSTSEC-2023-0071)
mongodb = []
# postgresql = ["sqlx", "sqlx/postgres"]  # Disabled due to RSA vulnerability in sqlx dependency tree
# Testing features
integration-tests = []              # Enable integration tests requiring running services
load-tests = []                     # Enable load testing scenarios
test-containers = []                # Enable test container support

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# API Documentation - Removed due to unmaintained proc-macro-error dependency (RUSTSEC-2024-0370)

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yaml = "0.9"

# Database  
mongodb = "3.0"
# sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "chrono", "uuid", "postgres"], optional = true }  # Removed due to RSA vulnerability

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"

# OAuth2 & Advanced Authentication
oauth2 = "4.4"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
totp-lite = "2.0"
qrcode = "0.14"
base32 = "0.5"

# WebAuthn (for FIDO2/passwordless auth)
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

# Social Login & HTTP Client Extensions  
# Note: Replaced unmaintained `surf` with `reqwest` which is actively maintained

# Caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
lru = "0.12"

# Email & HTTP Client
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# Configuration & Environment
config = "0.14"
dotenvy = "0.15"
num_cpus = "1.0"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "chrono"] }
prometheus = "0.14.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
md5 = "0.7"
thiserror = "1.0"
validator = { version = "0.19", features = ["derive"] }
regex = "1.10"
url = "2.5"
urlencoding = "2.1"
futures = "0.3"
fastrand = "2.0"

# Development
[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.8"
base64 = "0.21"

# Additional testing dependencies
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.5"
testcontainers = "0.15"
async-trait = "0.1"

[[bin]]
name = "test_cache"
path = "src/bin/test_cache.rs"

[[bin]]
name = "test_endpoints"
path = "src/bin/test_endpoints.rs"
